# Itprime_test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
HappyTicketsCalculator/: HappyTicketsCalculator.cpp  HappyTicketsCalculator.hpp  types.hpp  utilities.hpp
